Criação da branch Temperatura

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "massa.h": "c",
         "locale.h": "c",
-        "energia.h": "c"
+        "energia.h": "c",
+        "TEMPERATURA.C": "cpp"
     }
 }
